--- a/build.xml
+++ b/build.xml
@@ -11,14 +11,13 @@
     <property name="target" value="1.8"/>
     <property name="source" value="1.8"/>
     <path id="JUnit 4.libraryclasspath">
-        <pathelement location="../../.p2/pool/plugins/org.junit_4.12.0.v201504281640/junit.jar"/>
-        <pathelement location="../../.p2/pool/plugins/org.hamcrest.core_1.3.0.v201303031735.jar"/>
+        <pathelement location="junit.jar"/>
+        <pathelement location="org.hamcrest.core_1.3.0.v201303031735.jar"/>
     </path>
     <path id="BITicket.classpath">
         <pathelement location="bin"/>
         <pathelement location="javacsv.jar"/>
         <path refid="JUnit 4.libraryclasspath"/>
-        <pathelement location="../../Downloads/mockito-all-1.9.5.jar/mockito-all-1.9.5.jar"/>
     </path>
     <target name="init">
         <mkdir dir="bin"/>
