--- a/build.xml
+++ b/build.xml
@@ -3,20 +3,22 @@
               Any modifications will be overwritten.
               To include a user specific buildfile here, simply create one in the same
               directory with the processing instruction <?eclipse.ant.import?>
-              as the first entry and export the buildfile again. --><project name="kleinermatias/BITSoftware" default="build">
+              as the first entry and export the buildfile again. --><project basedir="." default="build" name="BITicket">
     <property environment="env"/>
-    <property name="ECLIPSE_HOME" value="../../eclipse/java-neon/eclipse/"/>
+    <property name="ECLIPSE_HOME" value="../../../eclipse/java-neon/eclipse/"/>
     <property name="junit.output.dir" value="junit"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.8"/>
     <property name="source" value="1.8"/>
     <path id="JUnit 4.libraryclasspath">
-        <pathelement location="junit.jar"/>
-        <pathelement location="org.hamcrest.core_1.3.0.v201303031735.jar"/>
+        <pathelement location="../../../.p2/pool/plugins/org.junit_4.12.0.v201504281640/junit.jar"/>
+        <pathelement location="../../../.p2/pool/plugins/org.hamcrest.core_1.3.0.v201303031735.jar"/>
     </path>
     <path id="BITicket.classpath">
         <pathelement location="bin"/>
         <pathelement location="javacsv.jar"/>
+        <pathelement location="lib/junit-4.12.jar"/>
+        <pathelement location="lib/hamcrest-core-1.3.jar"/>
         <path refid="JUnit 4.libraryclasspath"/>
     </path>
     <target name="init">
