--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: java
 jdk:
  - oraclejdk8
+ before_script:
+  - wget https://github.com/kleinermatias/BITSoftware/blob/master/javacsv.jar
+  - export PATH=$PATH:$PWD/javacsv.jar/bin/
 after_success:
   - bash <(curl -s https://codecov.io/bash)
