--- a/build.xml
+++ b/build.xml
@@ -4,6 +4,7 @@
   <property name="main.src.dir" value="src" />
   <property name="test.build.dir" value="build/test" />
   <property name="test.src.dir" value="test" />
+  <property name="main.dir" value="lib" />
 
   <path id="classpath.base" />
 
