--- a/.classpath
+++ b/.classpath
@@ -7,4 +7,5 @@
 	<classpathentry exported="true" kind="lib" path="lib/javacsv.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="lib" path="lib/javacsv.jar"/>
 </classpath>
