--- a/.classpath
+++ b/.classpath
@@ -2,10 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="lib" path="javacsv.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/junit-4.12.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/javacsv.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/javacsv.jar"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
