--- a/build.xml
+++ b/build.xml
@@ -10,6 +10,9 @@
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.8"/>
     <property name="source" value="1.8"/>
+                <javac srcdir="${src.dir}" destdir="${build.dir}" 
+            classpathref="build-classpath"
+ />
     <path id="BITicket.classpath">
         <pathelement location="bin"/>
         <pathelement location="lib/junit-4.12.jar"/>
