--- a/build.xml
+++ b/build.xml
@@ -4,11 +4,11 @@
     <!-- The value of a property is accessed via ${} -->
     <property name="src.dir" location="src" />
     <property name="build.dir" location="bin" />
-    <property name="libs.dir" location="libs" />
+    <property name="lib.dir" location="lib" />
     <property name="dist.dir" location="build/jar" />
     <property name="docs.dir" location="build/docs" />
     <path id="build-classpath">
-        <fileset dir="${libs.dir}">
+        <fileset dir="${lib.dir}">
             <include name="*.jar" />
         </fileset>
     </path>
@@ -43,7 +43,7 @@
     <!--Creates the deployable jar file  -->
     <target name="jar" depends="compile">
         <jar destfile="${dist.dir}\test.jar" basedir="${build.dir}">
-            <zipgroupfileset dir="${libs.dir}" includes="**/*.jar" />
+            <zipgroupfileset dir="${lib.dir}" includes="**/*.jar" />
             <manifest>
                 <attribute name="Main-Class" value="vml.coding.test.Test" />
                 <attribute name="Build-Path" value="${build-classpath}" />
